--- a/index.ipynb
+++ b/index.ipynb
@@ -60,12 +60,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "number = None\n",
-    "number"
+    "number="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_number():\n",
+    "    number=[]\n",
+    "    print(42)\n",
+    "print_number()"
    ]
   },
   {
@@ -77,13 +97,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "flatiron_mantra = None\n",
-    "flatiron_mantra"
+    "flatiron_mantra=\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "change things\n"
+     ]
+    }
+   ],
+   "source": [
+    "def flatiron_mantra():\n",
+    "    flatiron_mantra=[]\n",
+    "    print(\"change things\")\n",
+    "flatiron_mantra()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This is a new header"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_number():\n",
+    "    print(42)\n",
+    "print_number()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
